# stocklab

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
playground/: config.json  maintainance.ipynb
playground/initiate/: README.md  demo.ipynb
playground/initiate/data_download_helper/: taiex_stock_entity_ohlcv.py
src/: dev.ipynb
src/stocklab/: __init__.py
src/stocklab/database/: __init__.py  config.json
src/stocklab/database/market/: __init__.py  technical.py
